// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Button All Buttons 1`] = `
Array [
  <div>
    <div
      className="chakra-wrap css-0"
    >
      <ul
        className="chakra-wrap__list css-umyqv7"
      >
        <button
          className="chakra-button css-oun5fo"
          type="button"
        >
          Primary
        </button>
        <button
          className="chakra-button css-17qz5mz"
          type="button"
        >
          Secondary
        </button>
        <button
          className="chakra-button css-1q0mglp"
          colorscheme="tertiary"
          type="button"
        >
          Tertiary
        </button>
        <button
          className="chakra-button css-qcb80c"
          type="button"
        >
          Warning
        </button>
        <button
          className="chakra-button css-laxeh"
          type="button"
        >
          <span
            className="chakra-button__icon css-1wh2kri"
          >
            <svg
              aria-hidden={true}
              enableBackground="new 0 0 48 48"
              fill="currentColor"
              focusable={false}
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": undefined,
                }
              }
              version="1.1"
              viewBox="0 0 48 48"
              width="1em"
              x="0px"
              xmlns="http://www.w3.org/2000/svg"
              y="0px"
            >
              <path
                d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12
	c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24
	c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"
                fill="#FFC107"
              />
              <path
                d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657
	C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"
                fill="#FF3D00"
              />
              <path
                d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36
	c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"
                fill="#4CAF50"
              />
              <path
                d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571
	c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"
                fill="#1976D2"
              />
            </svg>
          </span>
          Sign In
        </button>
        <button
          aria-label="Saved"
          className="chakra-button css-gmz7ug"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          <span
            className="chakra-button__icon css-1wh2kri"
          >
            <svg
              aria-hidden={true}
              color="#fcc200"
              fill="currentColor"
              focusable={false}
              height="1em"
              stroke="currentColor"
              strokeWidth="0"
              style={
                Object {
                  "color": "#fcc200",
                }
              }
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M908.1 353.1l-253.9-36.9L540.7 86.1c-3.1-6.3-8.2-11.4-14.5-14.5-15.8-7.8-35-1.3-42.9 14.5L369.8 316.2l-253.9 36.9c-7 1-13.4 4.3-18.3 9.3a32.05 32.05 0 0 0 .6 45.3l183.7 179.1-43.4 252.9a31.95 31.95 0 0 0 46.4 33.7L512 754l227.1 119.4c6.2 3.3 13.4 4.4 20.3 3.2 17.4-3 29.1-19.5 26.1-36.9l-43.4-252.9 183.7-179.1c5-4.9 8.3-11.3 9.3-18.3 2.7-17.5-9.5-33.7-27-36.3z"
              />
            </svg>
          </span>
          Save
        </button>
      </ul>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Atoms/Button Button Size 1`] = `
Array [
  <div>
    <div
      className="chakra-wrap css-0"
    >
      <ul
        className="chakra-wrap__list css-umyqv7"
      >
        <button
          className="chakra-button css-1bbtzvt"
          type="button"
        >
          Small
        </button>
        <button
          className="chakra-button css-1q0mglp"
          type="button"
        >
          Medium
        </button>
        <button
          className="chakra-button css-11j93pi"
          type="button"
        >
          Large
        </button>
      </ul>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Atoms/Button Button Variants 1`] = `
Array [
  <div>
    <div
      className="chakra-wrap css-0"
    >
      <ul
        className="chakra-wrap__list css-umyqv7"
      >
        <button
          className="chakra-button css-163wo28"
          type="button"
        >
          Ghost
        </button>
        <button
          className="chakra-button css-1q0mglp"
          type="button"
        >
          Solid
        </button>
        <button
          className="chakra-button css-laxeh"
          type="button"
        >
          Outline
        </button>
        <button
          className="chakra-button css-1gqltrv"
          type="button"
        >
          Link
        </button>
      </ul>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Atoms/Button Generic Button 1`] = `
Array [
  <div>
    <div
      className="chakra-wrap css-0"
    >
      <ul
        className="chakra-wrap__list css-umyqv7"
      >
        <button
          className="chakra-button css-1q0mglp"
          disabled={false}
          type="button"
        >
          Button
        </button>
      </ul>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Atoms/Button Generic Save Button 1`] = `
Array [
  <div>
    <div
      className="chakra-wrap css-0"
    >
      <ul
        className="chakra-wrap__list css-umyqv7"
      >
        <button
          className="chakra-button css-1q0mglp"
          data-loading=""
          disabled={true}
          onClick={[Function]}
          savedStatus={true}
          type="button"
        >
          <div
            className="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
          >
            <div
              className="chakra-spinner css-1sqzeiz"
            >
              <span
                className="css-f8n5zr"
              >
                Loading...
              </span>
            </div>
          </div>
          <span
            className="css-q7lffx"
          />
        </button>
      </ul>
    </div>
  </div>,
  <span />,
]
`;

exports[`Storyshots Atoms/Button Loading Buttons 1`] = `
Array [
  <div>
    <div
      className="chakra-wrap css-0"
    >
      <ul
        className="chakra-wrap__list css-umyqv7"
      >
        <button
          className="chakra-button css-1q0mglp"
          data-loading=""
          disabled={true}
          type="button"
        >
          <div
            className="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
          >
            <div
              className="chakra-spinner css-1sqzeiz"
            >
              <span
                className="css-f8n5zr"
              >
                Loading...
              </span>
            </div>
          </div>
          <span
            className="css-q7lffx"
          >
            Primary
          </span>
        </button>
        <button
          className="chakra-button css-1snf2zz"
          data-loading=""
          disabled={true}
          type="button"
        >
          <div
            className="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
          >
            <div
              className="chakra-spinner css-1sqzeiz"
            >
              <span
                className="css-f8n5zr"
              >
                Loading...
              </span>
            </div>
          </div>
          <span
            className="css-q7lffx"
          >
            secondary
          </span>
        </button>
        <button
          className="chakra-button css-1snf2zz"
          data-loading=""
          disabled={true}
          type="button"
        >
          <div
            className="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
          >
            <div
              className="chakra-spinner css-1sqzeiz"
            >
              <span
                className="css-f8n5zr"
              >
                Loading...
              </span>
            </div>
          </div>
          <span
            className="css-q7lffx"
          >
            tertiary
          </span>
        </button>
        <button
          className="chakra-button css-1snf2zz"
          data-loading=""
          disabled={true}
          type="button"
        >
          <div
            className="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
          >
            <div
              className="chakra-spinner css-1sqzeiz"
            >
              <span
                className="css-f8n5zr"
              >
                Loading...
              </span>
            </div>
          </div>
          <span
            className="css-q7lffx"
          >
            <span
              className="chakra-button__icon css-1wh2kri"
            >
              <svg
                aria-hidden={true}
                enableBackground="new 0 0 48 48"
                fill="currentColor"
                focusable={false}
                height="1em"
                stroke="currentColor"
                strokeWidth="0"
                style={
                  Object {
                    "color": undefined,
                  }
                }
                version="1.1"
                viewBox="0 0 48 48"
                width="1em"
                x="0px"
                xmlns="http://www.w3.org/2000/svg"
                y="0px"
              >
                <path
                  d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12
	c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24
	c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"
                  fill="#FFC107"
                />
                <path
                  d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657
	C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"
                  fill="#FF3D00"
                />
                <path
                  d="M24,44c5.166,0,9.86-1.977,13.409-5.192l-6.19-5.238C29.211,35.091,26.715,36,24,36
	c-5.202,0-9.619-3.317-11.283-7.946l-6.522,5.025C9.505,39.556,16.227,44,24,44z"
                  fill="#4CAF50"
                />
                <path
                  d="M43.611,20.083H42V20H24v8h11.303c-0.792,2.237-2.231,4.166-4.087,5.571
	c0.001-0.001,0.002-0.001,0.003-0.002l6.19,5.238C36.971,39.205,44,34,44,24C44,22.659,43.862,21.35,43.611,20.083z"
                  fill="#1976D2"
                />
              </svg>
            </span>
            Sign In
          </span>
        </button>
        <button
          className="chakra-button css-1snf2zz"
          data-loading=""
          disabled={true}
          type="button"
        >
          <div
            className="chakra-button__spinner chakra-button__spinner--start css-1aamklj"
          >
            <div
              className="chakra-spinner css-1sqzeiz"
            >
              <span
                className="css-f8n5zr"
              >
                Loading...
              </span>
            </div>
          </div>
          <span
            className="css-q7lffx"
          />
        </button>
      </ul>
    </div>
  </div>,
  <span />,
]
`;
